--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "format": "prettier --write .",
     "build": "esbuild src/script.ts --bundle --outdir=dist",
-    "build:watch": "esbuild src/script.ts --bundle --outdir=dist --watch --servedir=."
+    "build:watch": "esbuild src/script.ts src/mcts.worker.ts --bundle --outdir=dist --watch --servedir=."
   },
   "keywords": [],
   "author": "",
