--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier --write .",
-    "build": "esbuild src/script.ts --bundle --outdir=dist",
+    "build": "esbuild src/script.ts src/mcts.worker.ts --bundle --outdir=dist --minify",
     "build:watch": "esbuild src/script.ts src/mcts.worker.ts --bundle --outdir=dist --watch --servedir=."
   },
   "keywords": [],
